--- a/style.css
+++ b/style.css
@@ -1,49 +1,77 @@
-body{
-    background-image: url(img/fondo.jpg);
-    background-size:  cover;
-    background-repeat: none;
+/* =======================
+   BARRA SUPERIOR
+======================= */
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #222; /* fondo negro */
+    color: #fff;
+    display: flex;
+    align-items: center;
+    padding: 0 20px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+    z-index: 1000;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: antiquewhite;
+    font-weight: bold;
+    letter-spacing: 1px;
 }
 
-main{
-    margin:40px auto;
+/* =======================
+   ESTILOS GENERALES
+======================= */
+body {
+    background-image: url(img/fondo.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: antiquewhite;
+    padding-top: 70px; /* deja espacio para la barra */
+}
+
+main {
+    margin: 40px auto;
     display: flex;
     width: 70%;
     align-items: center;
-    
+    flex-wrap: wrap;
 }
-h4{
-    color: black;
-    text-shadow: -1px 5 rgba(242, 239, 239, 0.2), 0 3px black,
-	  1px 0 rgb(0, 0, 0), 0 -5px rgb(0, 0, 0)
-}
-h3{
-    text-align: center;
-    color:black;
-    text-shadow: rgb(255, 255, 255) 0.1em 0.1em 0.2em
-}
-.section1{
-    padding: 0px 30px 30px 30px;
-    
-}
-button{
+
+/* =======================
+   TARJETAS
+======================= */
+button {
     background-color: rgb(169, 239, 246);
     box-shadow: inset 0 -3em 3em rgba(65, 63, 63, 0.118), 0.1em 0.1em 0.2em rgba(63, 61, 61, 0.343);
     height: 130px;
     width: 160px;
     margin: 10px;
     font-size: 20px;
-    color:rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
     border-radius: 20px;
-    
+    cursor: pointer;
+    transition: all 0.3s ease;
 }
-button:hover{
-    background-color: rgb(180, 233, 124);
-    
+
+/* Hover azul oscuro */
+button:hover {
+    background-color: #0d47a1; /* azul oscuro */
+    color: #fff;
 }
-.section2{
-    background-color: rgba(165, 248, 114, 0.742) ;
+
+/* Seleccionada verde */
+button.selected {
+    background-color: #2e7d32; /* verde */
+    color: #fff;
+}
+
+/* =======================
+   SECCIÓN 2
+======================= */
+.section2 {
+    background-color: rgba(165, 248, 114, 0.742);
     width: 300px;
     height: 300px;
     border-radius: 5px;
@@ -51,32 +79,46 @@ button:hover{
     padding-right: 10px;
     box-shadow: inset 0 -3em 3em rgba(136, 134, 134, 0.328), 0.1em 0.1em 0.2em rgba(135, 35, 35, 0.65);
 }
-h3{
+
+/* =======================
+   TEXTOS
+======================= */
+h3 {
     text-align: center;
-    color:black;
+    color: black;
     margin-top: 30px;
 }
-nav ul{
+
+h4 {
+    color: black;
+    text-shadow: -1px 5 rgba(242, 239, 239, 0.2), 0 3px black,
+                 1px 0 rgb(0,0,0), 0 -5px rgb(0,0,0);
+}
+
+/* =======================
+   NAV
+======================= */
+nav ul {
     padding-left: 20px;
 }
-nav ul li{
-  list-style: none;  
-  text-align: left; 
-  margin-top: 3px;
+
+nav ul li {
+    list-style: none;
+    text-align: left;
+    margin-top: 3px;
 }
- 
-nav ul li a{
-      
+
+nav ul li a {
     text-decoration: none;
     background-color: rgba(244, 181, 65, 0.731);
     border-radius: 30px;
     padding: 8px;
     color: black;
     box-shadow: black 0.1em 0.1em 0.2em;
-  
 }
 
-#volver{
+/* Botón volver */
+#volver {
     width: fit-content;
     height: fit-content;
     padding: 10px;
@@ -87,5 +129,6 @@ nav ul li a{
     box-shadow: black 0.1em 0.1em 0.2em;
     color: antiquewhite;
     border-radius: 50px;
-    font-size: medium ;
+    font-size: medium;
 }
+
